IS-76 Bumped dependencies and cleaned up code